fix: tooltip align

--- a/src/ui/component/AddressList/style.less
+++ b/src/ui/component/AddressList/style.less
@@ -104,7 +104,7 @@
 
 .addressType__tooltip {
   .ant-tooltip-content {
-    transform: translate(5px, 5px);
+    transform: translate(-3px, 5px);
   }
   .ant-tooltip-arrow {
     right: 10px !important;
